enterprise/operator/pkg/lb/testdata/lbservice_translation/36-proxy-protocol/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backends:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
  healthCheck:
    intervalSeconds: 30
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    http:
      host: lb
      path: /healthz
  proxyProtocolConfig:
    version: 2
    passthroughTLVs:
      - 1
      - 2
      - 3
